force-app/main/default/objects/Referral__c/fields/Attorney_Account__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Account__c</fullName>
    <label>Attorney Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attorney Referrals</relationshipLabel>
    <relationshipName>Attorney_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>