force-app/main/default/objects/Referral__c/fields/Attorney_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Case_Id__c</fullName>
    <externalId>true</externalId>
    <label>Attorney Case Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>