force-app/main/default/objects/Referral__c/fields/Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account__c</fullName>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Referrals</relationshipLabel>
    <relationshipName>Provider_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>