force-app/main/default/objects/Referral__c/fields/Provider_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Appointment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Provider Appointment Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>